# karp

./: README.md
karp/: CMakeLists.txt  package.xml
karp_bringup/: CMakeLists.txt  package.xml
karp_bringup/config/: karp_controllers.yaml
karp_bringup/launch/: karp.launch.py
karp_description/: CMakeLists.txt  package.xml
karp_description/config/: karp.rviz  karp_view.rviz
karp_description/launch/: view_karp_robot.launch.py
karp_description/meshes/: velodyne.dae
karp_description/ros2_control/: karp.ros2_control.xacro  karp_system.ros2_control.xacro
karp_description/urdf/: VLP-16.urdf.xacro  karp.urdf.xacro  karp_description.urdf.xacro  karp_system.urdf.xacro
karp_odrive/scripts/: odrive_config.py
