<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>karp</name>
  <version>0.0.0</version>
  <description>Metapackage for Kria Autonomous Robotic Platform `karp` packages. </description>
  <author email="jlamperez@todo.todo">Jorge Lamperez</author>
  <maintainer email="jlamperez@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>karp_bringup</exec_depend>
  <exec_depend>karp_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
